--- a/less/bootmetro/bootmetro-ui-light.less
+++ b/less/bootmetro/bootmetro-ui-light.less
@@ -555,7 +555,7 @@ button.win-command:disabled {
    &[disabled] {
       background-color: #781096;
       border-color: #781096;
-      color: #CCC;
+//      color: #CCC;
    }
    &:active,
    &.active {
