--- a/less/bootmetro/scaffolding.less
+++ b/less/bootmetro/scaffolding.less
@@ -9,9 +9,9 @@ body {
    padding-top: 24px;
    padding-bottom: 88px;
    position: relative;
-   font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
+//   font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
    font-weight: 300;
-   font-size: 11px;
+//   font-size: 11px;
 }
 
 a {
