--- a/less/bootmetro/type.less
+++ b/less/bootmetro/type.less
@@ -25,7 +25,7 @@ h4 /*, code, pre, samp*/ {
    font-size: 15px;
    line-height: 20px;
 }
-body, h5, legend {
+h5, legend {
    font-weight: 300;
    font-size: 13px;
    line-height: 20px;
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 
 dt, th {
    font-size: 15px;
-   font-weight: 700;
+   font-weight: 600;
    line-height: 1.3636; /* 20px when font-size is 11pt */
 }
 
@@ -68,7 +68,7 @@ abbr, acronym, address, blockquote, cite, dl, dd, li, ol, p, q, td, tr {
 }
 
 b, strong {
-   font-weight: 700;
+   font-weight: 600;
 }
 
 em {
