--- a/templates/docs/welcome.mustache
+++ b/templates/docs/welcome.mustache
@@ -1,6 +1,5 @@
 <div class="bs-docs-section-header" id="welcome">
-   <h1>Welcome</h1>
-   <p class="lead">BootMetro documentation.</p>
+   <h1>BootMetro Documentation</h1>
 </div>
 
 <div id="getting-started" class="bs-docs-section">
@@ -12,7 +11,7 @@
       There are a few easy ways to quickly get started with BootMetro, please read through.
    </p>
 
-   <div class="row">
+   <div class="row-fluid">
       <div class="span6">
          <h3>
             Compiled CSS and JS
@@ -21,7 +20,7 @@
             <strong>The fastest way to get started:</strong> get the compiled and minified versions of our CSS, JavaScript, and fonts. No documentation or original source files are included.
          </p>
          <p>
-            <a onclick="_gaq.push(['_trackEvent', 'Getting started', 'Download', 'Download compiled']);" href="assets/bootstrap.zip" class="btn btn-large btn-primary">Download Bootstrap</a>
+            <a href="#" class="btn btn-large btn-primary">Download BootMetro</a>
          </p>
       </div>
       <div class="span6">
@@ -32,9 +31,13 @@
             Get the original files for all CSS and JavaScript, along with a local copy of the docs by downloading the latest version directly from GitHub.
          </p>
          <p>
-            <a onclick="_gaq.push(['_trackEvent', 'Getting started', 'Download', 'Download source']);" href="https://github.com/twitter/bootstrap/zipball/master" class="btn btn-large">Download Bootstrap source</a>
+            <a href="#" class="btn btn-large">Download BootMetro source</a>
          </p>
       </div>
+   </div>
+
+   <div class="row-fluid">
+
       <div class="span12">
          <h3>
             Clone or fork via GitHub
@@ -43,9 +46,8 @@
             Clone the entire project or fork your own version of Bootstrap to make it your own by visiting us on GitHub.
          </p>
          <p>
-            <a onclick="_gaq.push(['_trackEvent', 'Getting started', 'Download', 'GitHub project']);" href="https://github.com/twitter/bootstrap/" class="btn btn-large">GitHub repository</a>
+            <a href="#" class="btn btn-large">GitHub repository</a>
          </p>
       </div>
-
    </div>
 </div>
