--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -4,9 +4,9 @@
 
     <li><a href="#welcome">Welcome!</a></li>
     <li><a href="#getting-started">Getting started</a></li>
-    <li><a href="#whats-included">What's included</a></li>
-    <li class=""><a href="#examples">Templates and examples</a></li>
-    <li class="active"><a href="#customizing">Customizing Bootstrap</a></li>
+    <!--<li><a href="#whats-included">What's included</a></li>-->
+    <!--<li class=""><a href="#examples">Templates and examples</a></li>-->
+    <!--<li class="active"><a href="#customizing">Customizing Bootstrap</a></li>-->
 
     <!-- CSS -->
     <li class=""><a href="#css" class="nav-header">CSS</a></li>
