--- a/less/bootmetro/bootmetro-icons.less
+++ b/less/bootmetro/bootmetro-icons.less
@@ -11,18 +11,18 @@
 // and background-position. Your resulting HTML will look like
 // <i class="icon-inbox"></i>.
 
-@fontIcomoonPath: '../font';
-
-@font-face {
-   font-family: 'IcoMoon';
-   src: url('@{fontIcomoonPath}/IcoMoon.eot');
-   src: url('@{fontIcomoonPath}/IcoMoon.svg#IcoMoon') format('svg'),
-        url('@{fontIcomoonPath}/IcoMoon.eot?#iefix') format('embedded-opentype'),
-        url('@{fontIcomoonPath}/IcoMoon.woff') format('woff'),
-        url('@{fontIcomoonPath}/IcoMoon.ttf') format('truetype');
-   font-weight: normal;
-   font-style: normal;
-}
+//@fontIcomoonPath: '../font';
+//
+//@font-face {
+//   font-family: 'IcoMoon';
+//   src: url('@{fontIcomoonPath}/IcoMoon.eot');
+//   src: url('@{fontIcomoonPath}/IcoMoon.svg#IcoMoon') format('svg'),
+//        url('@{fontIcomoonPath}/IcoMoon.eot?#iefix') format('embedded-opentype'),
+//        url('@{fontIcomoonPath}/IcoMoon.woff') format('woff'),
+//        url('@{fontIcomoonPath}/IcoMoon.ttf') format('truetype');
+//   font-weight: normal;
+//   font-style: normal;
+//}
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
