--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -22,6 +22,18 @@
 
    <link rel="stylesheet" type="text/css" href="../content/css/bootmetro.css">
    <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-responsive.css">
+   <style>
+      @font-face {
+         font-family: 'IcoMoon';
+         src: url('../content/font/IcoMoon.eot');
+         src: url('../content/font/IcoMoon.svg#IcoMoon') format('svg'),
+         url('../content/font/IcoMoon.eot?#iefix') format('embedded-opentype'),
+         url('../content/font/IcoMoon.woff') format('woff'),
+         url('../content/font/IcoMoon.ttf') format('truetype');
+         font-weight: normal;
+         font-style: normal;
+      }
+   </style>
    <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-icons.css">
    <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="../content/css/datepicker.css">
