--- a/templates/docs/scaffolding.mustache
+++ b/templates/docs/scaffolding.mustache
@@ -6,10 +6,7 @@
 
      <!-- Global Bootstrap settings
      ================================================== -->
-     <section id="scaffolding-global">
-       <div class="page-header">
-         <h1>Global settings</h1>
-       </div>
+      <h1 id="scaffolding-global">Global settings</h1>
 
        <h3>Requires HTML5 doctype</h3>
        <p>Bootstrap makes use of certain HTML elements and CSS properties that require the use of the HTML5 doctype. Include it at the beginning of all your projects.</p>
@@ -33,17 +30,13 @@
        <h3>Reset via Normalize</h3>
        <p>With Bootstrap 2, the old reset block has been dropped in favor of <a href="http://necolas.github.com/normalize.css/" target="_blank">Normalize.css</a>, a project by <a href="http://twitter.com/necolas" target="_blank">Nicolas Gallagher</a> and <a href="http://twitter.com/jon_neal" target="_blank">Jonathan Neal</a> that also powers the <a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a>. While we use much of Normalize within our <strong>reset.less</strong>, we have removed some elements specifically for Bootstrap.</p>
 
-     </section>
 
 
 
 
      <!-- Grid system
      ================================================== -->
-     <section id="scaffolding-gridSystem">
-       <div class="page-header">
-         <h1>Default grid system</h1>
-       </div>
+      <h1 id="scaffolding-gridSystem">Default grid system</h1>
 
        <h2>Live grid example</h2>
        <p>The default Bootstrap grid system utilizes <strong>12 columns</strong>, making for a 940px wide container without <a href="./scaffolding.html#responsive">responsive features</a> enabled. With the responsive CSS file added, the grid adapts to be 724px and 1170px wide depending on your viewport. Below 767px viewports, the columns become fluid and stack vertically.</p>
@@ -130,16 +123,12 @@
   &lt;/div&gt;
 &lt;/div&gt;
 </pre>
-     </section>
 
 
 
      <!-- Fluid grid system
      ================================================== -->
-     <section id="scaffolding-fluidGridSystem">
-       <div class="page-header">
-         <h1>Fluid grid system</h1>
-       </div>
+      <h1 id="scaffolding-fluidGridSystem">Fluid grid system</h1>
 
        <h2>Live fluid grid example</h2>
        <p>The fluid grid system uses percents instead of pixels for column widths. It has the same responsive capabilities as our fixed grid system, ensuring proper proportions for key screen resolutions and devices.</p>
@@ -248,17 +237,13 @@
    &lt;/div&gt;
    </pre>
 
-     </section>
 
 
 
 
      <!-- Layouts (Default and fluid)
      ================================================== -->
-     <section id="scaffolding-layouts">
-       <div class="page-header">
-         <h1>Layouts</h1>
-       </div>
+      <h1 id="scaffolding-layouts">Layouts</h1>
 
        <h2>Fixed layout</h2>
        <p>Provides a common fixed-width (and optionally responsive) layout with only <code>&lt;div class="container"&gt;</code> required.</p>
@@ -291,17 +276,13 @@
    &lt;/div&gt;
    &lt;/div&gt;
    </pre>
-     </section>
 
 
 
 
      <!-- Responsive design
      ================================================== -->
-     <section id="scaffolding-responsive">
-       <div class="page-header">
-         <h1>Responsive design</h1>
-       </div>
+      <h1 id="scaffolding-responsive">Responsive design</h1>
 
        {{! Enabling }}
        <h2>Enabling responsive features</h2>
@@ -453,7 +434,6 @@
          <li>Desktop<span class="hidden-desktop">&#10004; Desktop</span></li>
        </ul>
 
-     </section>
 
 </div>
 
