--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -9,6 +9,7 @@
     <li class=""><a href="#css" class="nav-header">CSS</a></li>
     <li>
       <a href="#scaffolding">Scaffolding</a>
+       <b class="caret"></b>
       <ul class="nav">
           <li><a href="#scaffolding-global">Global styles</a></li>
           <li><a href="#scaffolding-gridSystem">Grid system</a></li>
