wip docs + bootmetro css fixes

--- a/less/bootmetro/button-groups.less
+++ b/less/bootmetro/button-groups.less
@@ -13,7 +13,7 @@
 .btn-group > .dropdown-toggle {
    min-width: 20px;
    padding-bottom: 2px;
-   padding-top: 2px;
+//   padding-top: 2px;
 }
 
 
