--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -11,7 +11,7 @@ Dropdown submenu
    }
 }
 .caret:after {
-   content: "\e0d6";
+   content: "\e12c";
 }
 .navbar .nav li.dropdown .dropdown-toggle .caret,.navbar .nav li.dropdown.open .caret {
    border: 0;
@@ -49,7 +49,7 @@ Dropdown submenu
 }
 .dropup {
    .caret:after {
-      content: "\E0F2";
+      content: "\e12c";
    }
    .btn-large {
       .caret {
