--- a/less/bootmetro/forms.less
+++ b/less/bootmetro/forms.less
@@ -63,6 +63,10 @@ input[type=tel], input[type=url], input[type=search], textarea {
    min-height: 28px;
 }
 
+.radio.inline,
+.checkbox.inline {
+   padding-top: 0;
+}
 
 
 /*
