--- a/less/bootmetro/tables.less
+++ b/less/bootmetro/tables.less
@@ -92,15 +92,15 @@
       tr:hover td,
       tr:hover th {
          background-color: @tableBackgroundHover;
-         border-top: 1px solid @tableBorderHover;
-         border-bottom: 1px solid @tableBorderHover;
+//         border-top: 1px solid @tableBorderHover;
+//         border-bottom: 1px solid @tableBorderHover;
       }
-      tr:hover td:first-child {
-         border-left: 1px solid @tableBorderHover;
-      }
-      tr:hover td:last-child {
-         border-right: 1px solid @tableBorderHover;
-      }
+//      tr:hover td:first-child {
+//         border-left: 1px solid @tableBorderHover;
+//      }
+//      tr:hover td:last-child {
+//         border-right: 1px solid @tableBorderHover;
+//      }
    }
 }
 
@@ -111,7 +111,7 @@
       tr td:hover,
       tr th:hover {
          background-color: @tableBackgroundHover;
-         border: 1px solid @tableBorderHover;
+//         border: 1px solid @tableBorderHover;
       }
    }
 }
