--- a/templates/docs/base-css.mustache
+++ b/templates/docs/base-css.mustache
@@ -874,14 +874,14 @@
    <p>Add <code>.form-search</code> to the form and <code>.search-query</code> to the <code>&lt;input&gt;</code> for an extra-rounded text input.</p>
    <form class="bs-docs-example form-search">
       <input type="text" class="input-medium search-query">
-   <button type="submit" class="btn">Search</button>
+      <button type="submit" class="btn">Search</button>
    </form>
-   <pre class="prettyprint linenums">
-      &lt;form class="form-search"&gt;
-      &lt;input type="text" class="input-medium search-query"&gt;
-      &lt;button type="submit" class="btn"&gt;Search&lt;/button&gt;
-      &lt;/form&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;form class="form-search"&gt;
+&lt;input type="text" class="input-medium search-query"&gt;
+&lt;button type="submit" class="btn"&gt;Search&lt;/button&gt;
+&lt;/form&gt;
+</pre>
 
    <h3>Inline form</h3>
    <p>Add <code>.form-inline</code> for left-aligned labels and inline-block controls for a compact layout.</p>
@@ -1324,10 +1324,10 @@
    <form class="bs-docs-example form-search">
    <div class="input-append">
       <input type="text" class="span2 search-query">
-   <button type="submit" class="btn">Search</button>
+      <button type="submit" class="btn"><i class="icon-search"></i></button>
    </div>
    <div class="input-prepend">
-   <button type="submit" class="btn">Search</button>
+   <button type="submit" class="btn"><i class="icon-search"></i></button>
       <input type="text" class="span2 search-query">
    </div>
    </form>
