--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -8,8 +8,7 @@
     <!-- CSS -->
     <li class=""><a href="#css" class="nav-header">CSS</a></li>
     <li>
-      <a href="#scaffolding">Scaffolding</a>
-       <b class="caret"></b>
+      <a href="#scaffolding">Scaffolding</a><b class="caret"></b>
       <ul class="nav">
           <li><a href="#scaffolding-global">Global styles</a></li>
           <li><a href="#scaffolding-gridSystem">Grid system</a></li>
@@ -19,7 +18,7 @@
       </ul>
     </li>
     <li>
-      <a href="#typography">Typography</a>
+      <a href="#typography">Typography</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#typography-headings">Headings</a></li>
         <li><a href="#typography-body-copy">Body copy</a></li>
@@ -32,7 +31,7 @@
     </li>
     <li><a href="#code">Code</a></li>
     <li>
-      <a href="#tables">Tables</a>
+      <a href="#tables">Tables</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#tables-example">Basic example</a></li>
         <li><a href="#tables-striped">Zebra striping</a></li>
@@ -43,7 +42,7 @@
       </ul>
     </li>
     <li>
-      <a href="#forms">Forms</a>
+      <a href="#forms">Forms</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#forms-example">Basic example</a></li>
         <li><a href="#forms-inline">Inline variation</a></li>
@@ -57,7 +56,7 @@
       </ul>
     </li>
     <li>
-      <a href="#buttons">Buttons</a>
+      <a href="#buttons">Buttons</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#buttons-options">Button options</a></li>
         <li><a href="#buttons-sizes">Sizes</a></li>
@@ -73,7 +72,7 @@
     <li><a href="#components" class="nav-header">Components</a></li>
     <li><a href="#icons">Icons</a></li>
     <li>
-      <a href="#dropdowns">Dropdowns</a>
+      <a href="#dropdowns">Dropdowns</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#dropdowns-example">Example</a></li>
         <li><a href="#dropdowns-alignment">Alignment options</a></li>
@@ -82,7 +81,7 @@
       </ul>
     </li>
     <li>
-      <a href="#btn-groups">Button groups</a>
+      <a href="#btn-groups">Button groups</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#btn-groups-single">Basic button group</a></li>
         <li><a href="#btn-groups-toolbar">Button toolbar</a></li>
@@ -91,7 +90,7 @@
       </ul>
     </li>
     <li>
-      <a href="#btn-dropdowns">Button dropdowns</a>
+      <a href="#btn-dropdowns">Button dropdowns</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#btn-dropdowns-single">Single button dropdown</a></li>
         <li><a href="#btn-dropdowns-split">Split button dropdown</a></li>
@@ -100,7 +99,7 @@
       </ul>
     </li>
     <li>
-      <a href="#nav">Navs</a>
+      <a href="#nav">Navs</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#nav-tabs">Tabs nav</a></li>
         <li><a href="#nav-pills">Pills nav</a></li>
@@ -111,7 +110,7 @@
       </ul>
     </li>
     <li>
-      <a href="#navbar">Navbar</a>
+      <a href="#navbar">Navbar</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#navbar-basic">Basic navbar</a></li>
         <li><a href="#navbar-nav">Nav links</a></li>
@@ -124,7 +123,7 @@
     </li>
     <li><a href="#breadcrumbs">Breadcrumbs</a></li>
     <li>
-      <a href="#pagination">Pagination</a>
+      <a href="#pagination">Pagination</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#pagination-default">Default pagination</a></li>
         <li><a href="#pagination-pager">Pager</a></li>
@@ -133,7 +132,7 @@
     <li><a href="#labels">Labels</a></li>
     <li><a href="#badges">Badges</a></li>
     <li>
-      <a href="#type-components">Typography</a>
+      <a href="#type-components">Typography</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#type-components-jumbotron">Jumbotron</a></li>
         <li><a href="#type-components-page-header">Page header</a></li>
@@ -141,7 +140,7 @@
     </li>
     <li><a href="#thumbnails">Thumbnails</a></li>
     <li>
-      <a href="#alerts">Alerts</a>
+      <a href="#alerts">Alerts</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#alerts-default">Default alert</a></li>
         <li><a href="#alerts-block">Block alerts</a></li>
@@ -149,7 +148,7 @@
       </ul>
     </li>
     <li>
-      <a href="#progress">Progress bars</a>
+      <a href="#progress">Progress bars</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#progress-basic">Basic progress bar</a></li>
         <li><a href="#progress-alternatives">Contextual alternatives</a></li>
@@ -160,7 +159,7 @@
     </li>
     <li><a href="#media">Media object</a></li>
     <li>
-      <a href="#list-group">List group</a>
+      <a href="#list-group">List group</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#list-group-basic">Basic list group</a></li>
         <li><a href="#list-group-chevrons">Chevrons</a></li>
@@ -172,7 +171,7 @@
       </ul>
     </li>
     <li>
-      <a href="#panels">Panels</a>
+      <a href="#panels">Panels</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#panels-basic">Basic panel</a></li>
         <li><a href="#panels-heading">Panel with heading</a></li>
@@ -185,7 +184,7 @@
     <!-- JavaScript -->
     <li><a href="#js" class="nav-header">JavaScript</a></li>
     <li>
-      <a href="#js-overview">Overview</a>
+      <a href="#js-overview">Overview</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#js-individual-compiled">Individual or compiled</a></li>
         <li><a href="#js-data-attributes">Data attributes</a></li>
@@ -196,7 +195,7 @@
     </li>
     <li><a href="#js-transitions">Transitions</a></li>
     <li>
-      <a href="#js-modals">Modal</a>
+      <a href="#js-modals">Modal</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#modals-examples">Examples</a></li>
         <li><a href="#modals-usage">Usage</a></li>
@@ -215,7 +214,7 @@
     <li><a href="#js-affix">Affix</a></li>
 
    <li>
-      <a href="#metro-commands">Command Buttons</a>
+      <a href="#metro-commands">Command Buttons</a><b class="caret"></b>
       <ul class="nav">
          <li><a href="#metro-progress">Metro Progress Bars</a></li>
          <li><a href="#metro-modals">Modal</a></li>
