wip docs & fixes

--- a/less/bootmetro/bootmetro-ui-light.less
+++ b/less/bootmetro/bootmetro-ui-light.less
@@ -299,7 +299,7 @@ a.win-command .win-label,button.win-command .win-label {
 .btn.disabled,.btn[disabled] {
    background-color: rgba(202, 202, 202, 0.4);
    border-color: rgba(0, 0, 0, 0.08);
-   color: rgba(0, 0, 0, 0.4);
+//   color: rgba(0, 0, 0, 0.4);
 }
 input:hover:active::-ms-check {
    background-clip: border-box;
