--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -10,7 +10,7 @@ button, input[type=button], input[type=reset], input[type=submit] {
 //   min-width: 90px;
    padding: 4px 8px;
    margin-bottom: 0;
-   border: 2px solid;
+   border: 2px solid @btnBorder;
    background-clip: padding-box;
    font-weight: 600;
    line-height: 1.3636; /* 20px when font-size is 11pt */
