--- a/less/bootmetro/pagination.less
+++ b/less/bootmetro/pagination.less
@@ -5,13 +5,13 @@
    .next {
       a:after {
          font-family: 'IcoMoon';
-         content: "\e0f1";
+         content: "\e12a";
       }
    }
    .previous {
       a:before {
          font-family: 'IcoMoon';
-         content: "\e0f4";
+         content: "\e127";
       }
    }
 }
