--- a/templates/docs/javascript.mustache
+++ b/templates/docs/javascript.mustache
@@ -1,8 +1,8 @@
         <!-- Overview
         ================================================== -->
-<div id="js" class="bs-docs-section">
+<div class="bs-docs-section">
           <div class="page-header">
-            <h1>JavaScript in Bootstrap</h1>
+            <h1 id="js">JavaScript in Bootstrap</h1>
           </div>
 
           <h3>Individual or compiled</h3>
@@ -101,7 +101,7 @@ $('#myModal').on('show', function (e) {
 <pre class="prettyprint linenums">
 &lt;div class="modal hide fade"&gt;
   &lt;div class="modal-header"&gt;
-    &lt;button type="button" class="close" data-dismiss="modal" aria-hidden="true"&gt;&amp;times;&lt;/button&gt;
+    &lt;button type="button" class="close" data-dismiss="modal" aria-hidden="true"&gt;&lt;/button&gt;
     &lt;h3&gt;Modal header&lt;/h3&gt;
   &lt;/div&gt;
   &lt;div class="modal-body"&gt;
@@ -1287,8 +1287,8 @@ $('#myCollapsible').on('hidden', function () {
                     </div>
                   </div>
                 </div>
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe0f4;</a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe0f1;</a>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe127;</a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe12a;</a>
               </div>
             </div>{{! /example }}
 <pre class="prettyprint linenums">
