--- a/templates/docs/components.mustache
+++ b/templates/docs/components.mustache
@@ -5,7 +5,7 @@
             <h1>Dropdown menus</h1>
           </div>
 
-          <h2>Example</h2>
+          <h2 id="dropdowns-example">Example</h2>
           <p>Toggleable, contextual menu for displaying lists of links. Made interactive with the <a href="./javascript.html#dropdowns">dropdown JavaScript plugin</a>.</p>
           <div class="bs-docs-example">
             <div class="dropdown clearfix">
@@ -44,7 +44,7 @@
 &lt;/div&gt;
 </pre>
 
-          <h2>Options</h2>
+          <h2 id="dropdowns-alignment">Options</h2>
           <p>Align menus to the right and add include additional levels of dropdowns.</p>
 
           <h3>Aligning the menus</h3>
@@ -62,15 +62,13 @@
 
         <!-- Button Groups
         ================================================== -->
-<div id="buttonGroups" class="bs-docs-section">
-          <div class="page-header">
-            <h1>Button groups</h1>
-          </div>
+<div class="bs-docs-section">
+         <h1 id="btn-groups">Button groups</h1>
 
           <h2>Examples</h2>
           <p>Two basic options, along with two more specific variations.</p>
 
-          <h3>Single button group</h3>
+          <h3 id="btn-groups-single">Single button group</h3>
           <p>Wrap a series of buttons with <code>.btn</code> in <code>.btn-group</code>.</p>
           <div class="bs-docs-example">
             <div class="btn-group" style="margin: 9px 0 5px;">
@@ -87,7 +85,7 @@
 &lt;/div&gt;
 </pre>
 
-          <h3>Multiple button groups</h3>
+          <h3 id="btn-groups-toolbar">Multiple button groups</h3>
           <p>Combine sets of <code>&lt;div class="btn-group"&gt;</code> into a <code>&lt;div class="btn-toolbar"&gt;</code> for more complex components.</p>
           <div class="bs-docs-example">
             <div class="btn-toolbar" style="margin: 0;">
@@ -115,7 +113,7 @@
 &lt;/div&gt;
 </pre>
 
-          <h3>Vertical button groups</h3>
+          <h3 id="btn-groups-vertical">Vertical button groups</h3>
           <p>Make a set of buttons appear vertically stacked rather than horizontally.</p>
           <div class="bs-docs-example">
             <div class="btn-group btn-group-vertical">
@@ -145,11 +143,8 @@
 
         <!-- Split button dropdowns
         ================================================== -->
-<div id="buttonDropdowns" class="bs-docs-section">
-          <div class="page-header">
-            <h1>Button dropdown menus</h1>
-          </div>
-
+<div class="bs-docs-section">
+         <h1 id="btn-dropdowns">Button dropdown menus</h1>
 
           <h2>Overview and examples</h2>
           <p>Use any button to trigger a dropdown menu by placing it within a <code>.btn-group</code> and providing the proper menu markup.</p>
@@ -239,7 +234,7 @@
 &lt;/div&gt;
 </pre>
 
-          <h3>Works with all button sizes</h3>
+          <h3 id="btn-dropdowns-sizes">Works with all button sizes</h3>
           <p>Button dropdowns work at any size:  <code>.btn-large</code>, <code>.btn-small</code>, or <code>.btn-mini</code>.</p>
           <div class="bs-docs-example">
             <div class="btn-toolbar" style="margin: 0;">
@@ -284,7 +279,7 @@
           <hr class="bs-docs-separator">
 
 
-          <h2>Split button dropdowns</h2>
+          <h2 id="btn-dropdowns-split">Split button dropdowns</h2>
           <p>Building on the button group styles and markup, we can easily create a split button. Split buttons feature a standard action on the left and a dropdown toggle on the right with contextual links.</p>
           <div class="bs-docs-example">
             <div class="btn-toolbar" style="margin: 0;">
@@ -434,7 +429,7 @@
 &lt;/div&gt;
 </pre>
 
-          <h3>Dropup menus</h3>
+          <h3 id="btn-dropdowns-dropup">Dropup menus</h3>
           <p>Dropdown menus can also be toggled from the bottom up by adding a single class to the immediate parent of <code>.dropdown-menu</code>. It will flip the direction of the <code>.caret</code> and reposition the menu itself to move from the bottom up instead of top down.</p>
           <div class="bs-docs-example">
             <div class="btn-toolbar" style="margin: 0;">
@@ -480,9 +475,9 @@
 
         <!-- Nav, Tabs, & Pills
         ================================================== -->
-<div id="navs" class="bs-docs-section">
+<div class="bs-docs-section">
           <div class="page-header">
-            <h1>Nav: tabs, pills, and lists</small></h1>
+            <h1 id="navs">Nav: tabs, pills, and lists</small></h1>
           </div>
 
           <h2>Lightweight defaults <small>Same markup, different classes</small></h2>
@@ -2269,9 +2264,9 @@
           <h2>Close icon</h2>
           <p>Use the generic close icon for dismissing content like modals and alerts.</p>
           <div class="bs-docs-example">
-            <p><button class="close" style="float: none;">&times;</button></p>
+            <p><button class="close" style="float: none;"></button></p>
           </div>
-          <pre class="prettyprint linenums">&lt;button class="close"&gt;&amp;times;&lt;/button&gt;</pre>
+          <pre class="prettyprint linenums">&lt;button class="close"&gt;&lt;/button&gt;</pre>
           <p>iOS devices require an href="#" for click events if you would rather use an anchor.</p>
           <pre class="prettyprint linenums">&lt;a class="close" href="#"&gt;&amp;times;&lt;/a&gt;</pre>
 
