--- a/templates/pages/index2.mustache
+++ b/templates/pages/index2.mustache
@@ -36,9 +36,20 @@
             </p>
 
             <a class="btn btn-large btn-success" href="https://github.com/aozora/bootmetro/zipball/master">
-               Download Now
+               <div class="text">
+                  <span class="header">Download Now</span>
+                  <span class="small">latest version: 0.7</span>
+               </div>
                <i class="icon-download"></i>
             </a>
+
+            <a class="btn btn-large btn-info" href="./features.html">
+               <div class="text">
+                  <span class="header">View the features</span>
+               </div>
+               <i class="icon-arrow-right-5"></i>
+            </a>
+
 
          </div>
       </div>
