--- a/less/bootmetro/variables.less
+++ b/less/bootmetro/variables.less
@@ -59,8 +59,8 @@
 
 // Typography
 // -------------------------
-@sansFontFamily:        "Open Sans",Arial,Helvetica,Sans-Serif;
-@serifFontFamily:       "Open Sans",Arial,Helvetica,Sans-Serif;
+@sansFontFamily:        "Open Sans","Helvetica Neue", Helvetica, Arial,Sans-Serif;
+@serifFontFamily:       "Open Sans","Helvetica Neue", Helvetica, Arial,Sans-Serif;
 @monoFontFamily:        Menlo, Monaco, Consolas, "Courier New", monospace;
 
 
@@ -69,7 +69,7 @@
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    "Open Sans",Arial,Helvetica,Sans-Serif;
+@headingsFontFamily:    "Open Sans","Helvetica Neue", Helvetica, Arial,Sans-Serif;
 @headingsFontWeight:    300; // instead of browser default, bold
 @headingsColor:         inherit; // empty to use BS default, @textColor
 
@@ -84,7 +84,7 @@
 
 @paddingLarge:          11px 19px; // 44px
 @paddingSmall:          2px 10px;  // 26px
-@paddingMini:           1px 6px;   // 24px
+@paddingMini:           0 6px;   // 22px
 
 @baseBorderRadius:      0;
 @borderRadiusLarge:     0;
