--- a/templates/docs/metro-components.mustache
+++ b/templates/docs/metro-components.mustache
@@ -1,8 +1,8 @@
          <!-- Commands
          ================================================== -->
-<div id="metro-commands" class="bs-docs-section">
+<div class="bs-docs-section">
             <div class="page-header">
-               <h1>Command Buttons <small>Special action buttons</small></h1>
+               <h1 id="metro-commands">Command Buttons <small>Special action buttons</small></h1>
             </div>
 
             <h2>Examples and markup</h2>
@@ -191,9 +191,9 @@
 
          <!-- Progress bars
          ================================================== -->
-<div id="metro-progress" class="bs-docs-section">
+<div class="bs-docs-section">
             <div class="page-header">
-               <h1>Metro Progress Bars <small>For loading, redirecting, or action status</small></h1>
+               <h1 id="metro-progress">Metro Progress Bars <small>For loading, redirecting, or action status</small></h1>
             </div>
 
             <h2>Examples and markup</h2>
@@ -243,9 +243,9 @@
 
          <!-- Modal
          ================================================== -->
- <div id="metro-modals" class="bs-docs-section">
+ <div class="bs-docs-section">
             <div class="page-header">
-               <h1>Modals <small>bootstrap-modal.js</small></h1>
+               <h1 id="metro-modals">Modals <small>bootstrap-modal.js</small></h1>
             </div>
 
 
@@ -479,9 +479,9 @@ $('#myModal').on('hidden', function () {
 
          <!-- DatePicker
          ================================================== -->
-  <div id="metro-datepicker" class="bs-docs-section">
+  <div class="bs-docs-section">
             <div class="page-header">
-               <h1>DatePicker <small></small></h1>
+               <h1 id="metro-datepicker">DatePicker <small></small></h1>
             </div>
             <p>Code from: <a href="http://www.eyecon.ro/bootstrap-datepicker/">http://www.eyecon.ro/bootstrap-datepicker/</a></p>
 
@@ -521,9 +521,9 @@ $('#myModal').on('hidden', function () {
 
          <!-- FlipView
          ================================================== -->
-  <div id="metro-flipview" class="bs-docs-section">
+  <div class="bs-docs-section">
             <div class="page-header">
-               <h1>FlipView <small></small></h1>
+               <h1 id="metro-flipview">FlipView <small></small></h1>
             </div>
             <p>The FlipView control lets flip through views or items one at a time. Flip buttons appear on mouse hover and let people flip to the next or previous item.</p>
             <p>
