--- a/templates/docs/scaffolding.mustache
+++ b/templates/docs/scaffolding.mustache
@@ -1,6 +1,6 @@
-<div id="scaffolding" class="bs-docs-section">
+<div class="bs-docs-section">
    <div class="page-header">
-      <h1>Scaffolding</h1>
+      <h1 id="scaffolding">Scaffolding</h1>
    </div>
    <p class="lead">Bootstrap is built on responsive 12-column grids, layouts, and components.</p>
 
@@ -167,12 +167,12 @@
 
        <h3>Basic fluid grid HTML</h3>
        <p>Make any row "fluid" by changing <code>.row</code> to <code>.row-fluid</code>. The column classes stay the exact same, making it easy to flip between fixed and fluid grids.</p>
-   <pre class="prettyprint linenums">
-   &lt;div class="row-fluid"&gt;
+<pre class="prettyprint linenums">
+&lt;div class="row-fluid"&gt;
    &lt;div class="span4"&gt;...&lt;/div&gt;
    &lt;div class="span8"&gt;...&lt;/div&gt;
-   &lt;/div&gt;
-   </pre>
+&lt;/div&gt;
+</pre>
 
        <h2>Fluid offsetting</h2>
        <p>Operates the same way as the fixed grid system offsetting: add <code>.offset*</code> to any column to offset by that many columns.</p>
@@ -189,12 +189,12 @@
            <div class="span6 offset6">6 offset 6</div>
          </div><!-- /row -->
        </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="row-fluid"&gt;
+<pre class="prettyprint linenums">
+&lt;div class="row-fluid"&gt;
    &lt;div class="span4"&gt;...&lt;/div&gt;
    &lt;div class="span4 offset2"&gt;...&lt;/div&gt;
-   &lt;/div&gt;
-   </pre>
+&lt;/div&gt;
+</pre>
 
        <h2>Fluid nesting</h2>
        <p>Fluid grids utilize nesting differently: each nested level of columns should add up to 12 columns. This is because the fluid grid uses percentages, not pixels, for setting widths.</p>
@@ -219,8 +219,8 @@
            </div>
          </div>
        </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="row-fluid"&gt;
+<pre class="prettyprint linenums">
+&lt;div class="row-fluid"&gt;
    &lt;div class="span12"&gt;
    Fluid 12
    &lt;div class="row-fluid"&gt;
@@ -234,8 +234,8 @@
    &lt;div class="span6"&gt;Fluid 6&lt;/div&gt;
    &lt;/div&gt;
    &lt;/div&gt;
-   &lt;/div&gt;
-   </pre>
+&lt;/div&gt;
+</pre>
 
 
 
@@ -250,13 +250,13 @@
        <div class="mini-layout">
          <div class="mini-layout-body"></div>
        </div>
-   <pre class="prettyprint linenums">
-   &lt;body&gt;
+<pre class="prettyprint linenums">
+&lt;body&gt;
    &lt;div class="container"&gt;
    ...
    &lt;/div&gt;
-   &lt;/body&gt;
-   </pre>
+&lt;/body&gt;
+</pre>
 
        <h2>Fluid layout</h2>
        <p>Create a fluid, two-column page with <code>&lt;div class="container-fluid"&gt;</code>&mdash;great for applications and docs.</p>
@@ -264,8 +264,8 @@
          <div class="mini-layout-sidebar"></div>
          <div class="mini-layout-body"></div>
        </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="container-fluid"&gt;
+<pre class="prettyprint linenums">
+&lt;div class="container-fluid"&gt;
    &lt;div class="row-fluid"&gt;
    &lt;div class="span2"&gt;
    &lt;!--Sidebar content--&gt;
@@ -274,8 +274,8 @@
    &lt;!--Body content--&gt;
    &lt;/div&gt;
    &lt;/div&gt;
-   &lt;/div&gt;
-   </pre>
+&lt;/div&gt;
+</pre>
 
 
 
@@ -287,13 +287,12 @@
        {{! Enabling }}
        <h2>Enabling responsive features</h2>
        <p>Turn on responsive CSS in your project by including the proper meta tag and additional stylesheet within the <code>&lt;head&gt;</code> of your document. If you've compiled Bootstrap from the Customize page, you need only include the meta tag.</p>
-   <pre class="prettyprint linenums">
-   &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-   &lt;link href="assets/css/bootstrap-responsive.css" rel="stylesheet"&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+&lt;link href="assets/css/bootstrap-responsive.css" rel="stylesheet"&gt;
+</pre>
        <p><span class="label label-info">Heads up!</span>  Bootstrap doesn't include responsive features by default at this time as not everything needs to be responsive. Instead of encouraging developers to remove this feature, we figure it best to enable it as needed.</p>
 
-       {{! About }}
        <h2>About responsive Bootstrap</h2>
        <img src="assets/img/responsive-illustrations.png" alt="Responsive devices" style="float: right; margin: 0 0 20px 20px;">
        <p>Media queries allow for custom CSS based on a number of conditions&mdash;ratios, widths, display type, etc&mdash;but usually focuses around <code>min-width</code> and <code>max-width</code>.</p>
@@ -304,7 +303,6 @@
        </ul>
        <p>Use media queries responsibly and only as a start to your mobile audiences. For larger projects, do consider dedicated code bases and not layers of media queries.</p>
 
-       {{! Supported }}
        <h2>Supported devices</h2>
        <p>Bootstrap supports a handful of media queries in a single file to help make your projects more appropriate on different devices and screen resolutions. Here's what's included:</p>
        <table class="table table-bordered table-striped">
@@ -347,22 +345,21 @@
            </tr>
          </tbody>
        </table>
-   <pre class="prettyprint linenums">
-   /* Large desktop */
-   @media (min-width: 1200px) { ... }
+<pre class="prettyprint linenums">
+/* Large desktop */
+@media (min-width: 1200px) { ... }
 
-   /* Portrait tablet to landscape and desktop */
-   @media (min-width: 768px) and (max-width: 979px) { ... }
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) { ... }
 
-   /* Landscape phone to portrait tablet */
-   @media (max-width: 767px) { ... }
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) { ... }
 
-   /* Landscape phones and down */
-   @media (max-width: 480px) { ... }
-   </pre>
+/* Landscape phones and down */
+@media (max-width: 480px) { ... }
+</pre>
 
 
-       {{! Responsive utility classes }}
        <h2>Responsive utility classes</h2>
        <p>For faster mobile-friendly development, use these utility classes for showing and hiding content by device. Below is a table of the available classes and their effect on a given media query layout (labeled by device). They can be found in <code>responsive.less</code>.</p>
        <table class="table table-bordered table-striped responsive-utilities">
