--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -48,11 +48,11 @@
         <li><a href="#forms-inline">Inline variation</a></li>
         <li><a href="#forms-horizontal">Horizontal variation</a></li>
         <li><a href="#forms-controls">Supported controls</a></li>
-        <li><a href="#forms-control-states">Control states</a></li>
         <li><a href="#forms-input-groups">Input groups</a></li>
         <li><a href="#forms-control-sizes">Control sizing</a></li>
         <li><a href="#forms-actions">Form actions</a></li>
         <li><a href="#forms-help-text">Help text</a></li>
+         <li><a href="#forms-control-states">Control states</a></li>
       </ul>
     </li>
     <li>
@@ -65,17 +65,18 @@
       </ul>
     </li>
     <li><a href="#images">Images</a></li>
-    <li><a href="#helper-classes">Helper classes</a></li>
-    <li><a href="#responsive-utilities">Responsive utilities</a></li>
+    <!--<li><a href="#helper-classes">Helper classes</a></li>-->
+    <!--<li><a href="#responsive-utilities">Responsive utilities</a></li>-->
 
     <!-- Components -->
-    <li><a href="#components" class="nav-header">Components</a></li>
     <li><a href="#icons">Icons</a></li>
+    <li><a href="#components" class="nav-header">Components</a></li>
     <li>
       <a href="#dropdowns">Dropdowns</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#dropdowns-example">Example</a></li>
-        <li><a href="#dropdowns-alignment">Alignment options</a></li>
+         <li><a href="#dropdowns-alignment">Alignment options</a></li>
+         <li><a href="#dropdowns-submenus">Alignment options</a></li>
       </ul>
     </li>
     <li>
@@ -90,7 +91,7 @@
       <a href="#btn-dropdowns">Button dropdowns</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#btn-dropdowns-sizes">Button sizes</a></li>
-        <li><a href="#btn-dropdowns-single">Single button dropdown</a></li>
+        <!--<li><a href="#btn-dropdowns-single">Single button dropdown</a></li>-->
         <li><a href="#btn-dropdowns-split">Split button dropdown</a></li>
         <li><a href="#btn-dropdowns-dropup">Dropup variation</a></li>
       </ul>
@@ -100,10 +101,12 @@
       <ul class="nav">
         <li><a href="#nav-tabs">Tabs nav</a></li>
         <li><a href="#nav-pills">Pills nav</a></li>
-        <li><a href="#nav-justified">Justified nav</a></li>
+        <!--<li><a href="#nav-justified">Justified nav</a></li>-->
         <li><a href="#nav-disabled-links">Disabled links</a></li>
         <li><a href="#nav-alignment">Alignment options</a></li>
-        <li><a href="#nav-dropdowns">Using dropdowns</a></li>
+         <li><a href="#nav-dropdowns">Using dropdowns</a></li>
+         <li><a href="#nav-list">Nav list</a></li>
+         <li><a href="#nav-tabbable">Tabbable nav</a></li>
       </ul>
     </li>
     <li>
@@ -140,48 +143,54 @@
       <a href="#alerts">Alerts</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#alerts-default">Default alert</a></li>
-        <li><a href="#alerts-block">Block alerts</a></li>
-        <li><a href="#alerts-alternatives">Contextual alternatives</a></li>
+        <!--<li><a href="#alerts-block">Block alerts</a></li>-->
+        <!--<li><a href="#alerts-alternatives">Contextual alternatives</a></li>-->
       </ul>
     </li>
     <li>
       <a href="#progress">Progress bars</a><b class="caret"></b>
       <ul class="nav">
-        <li><a href="#progress-basic">Basic progress bar</a></li>
+        <li><a href="#progress-determinate">Determinate progress bar</a></li>
+         <li><a href="#progress-stacked">Stacked</a></li>
         <li><a href="#progress-alternatives">Contextual alternatives</a></li>
         <li><a href="#progress-striped">Striped</a></li>
-        <li><a href="#progress-animated">Animated</a></li>
-        <li><a href="#progress-stacked">Stacked</a></li>
+        <!--<li><a href="#progress-animated">Animated</a></li>-->
       </ul>
     </li>
     <li><a href="#media">Media object</a></li>
+    <!--<li>-->
+      <!--<a href="#list-group">List group</a><b class="caret"></b>-->
+      <!--<ul class="nav">-->
+        <!--<li><a href="#list-group-basic">Basic list group</a></li>-->
+        <!--<li><a href="#list-group-chevrons">Chevrons</a></li>-->
+        <!--<li><a href="#list-group-badges">Badges</a></li>-->
+        <!--<li><a href="#list-group-badges-chevrons">Badges and chevrons</a></li>-->
+        <!--<li><a href="#list-group-linked">Linked items</a></li>-->
+        <!--<li><a href="#list-group-custom-content">Custom content</a></li>-->
+        <!--&lt;!&ndash; <li><a href="#list-group-pic">Leading picture</a></li> &ndash;&gt;-->
+      <!--</ul>-->
+    <!--</li>-->
+    <!--<li>-->
+      <!--<a href="#panels">Panels</a><b class="caret"></b>-->
+      <!--<ul class="nav">-->
+        <!--<li><a href="#panels-basic">Basic panel</a></li>-->
+        <!--<li><a href="#panels-heading">Panel with heading</a></li>-->
+        <!--<li><a href="#panels-alternatives">Contextual alternatives</a></li>-->
+        <!--<li><a href="#panels-list-group">With list groups</a>-->
+      <!--</li></ul>-->
+    <!--</li>-->
     <li>
-      <a href="#list-group">List group</a><b class="caret"></b>
-      <ul class="nav">
-        <li><a href="#list-group-basic">Basic list group</a></li>
-        <li><a href="#list-group-chevrons">Chevrons</a></li>
-        <li><a href="#list-group-badges">Badges</a></li>
-        <li><a href="#list-group-badges-chevrons">Badges and chevrons</a></li>
-        <li><a href="#list-group-linked">Linked items</a></li>
-        <li><a href="#list-group-custom-content">Custom content</a></li>
-        <!-- <li><a href="#list-group-pic">Leading picture</a></li> -->
-      </ul>
+       <a href="#misc">Misc</a><b class="caret"></b>
+       <ul class="nav">
+          <li><a href="#misc-well">Wells</a></li>
+          <li><a href="#misc-close">Close icon</a></li>
+       </ul>
     </li>
-    <li>
-      <a href="#panels">Panels</a><b class="caret"></b>
-      <ul class="nav">
-        <li><a href="#panels-basic">Basic panel</a></li>
-        <li><a href="#panels-heading">Panel with heading</a></li>
-        <li><a href="#panels-alternatives">Contextual alternatives</a></li>
-        <li><a href="#panels-list-group">With list groups</a>
-      </li></ul>
-    </li>
-    <li><a href="#wells">Wells</a></li>
 
     <!-- JavaScript -->
-    <li><a href="#js" class="nav-header">JavaScript</a></li>
+    <!--<li><a href="#js" class="nav-header">JavaScript</a></li>-->
     <li>
-      <a href="#js-overview">Overview</a><b class="caret"></b>
+       <a href="#js" class="js">JavaScript</a><b class="caret"></b>
       <ul class="nav">
         <li><a href="#js-individual-compiled">Individual or compiled</a></li>
         <li><a href="#js-data-attributes">Data attributes</a></li>
@@ -212,13 +221,11 @@
 
    <li>
       <a href="#metro-commands">Command Buttons</a><b class="caret"></b>
-      <ul class="nav">
-         <li><a href="#metro-progress">Metro Progress Bars</a></li>
-         <li><a href="#metro-modals">Modal</a></li>
-         <li><a href="#metro-datepicker">DatePicker</a></li>
-         <li><a href="#metro-flipview">FlipView</a></li>
-      </ul>
    </li>
+   <li><a href="#metro-progress">Metro Progress Bars</a></li>
+   <li><a href="#metro-modals">Modal</a></li>
+   <li><a href="#metro-datepicker">DatePicker</a></li>
+   <li><a href="#metro-flipview">FlipView</a></li>
 
 
   </ul>
