wip docs - prev upgraded to Bootstrap 2.3.1

--- a/templates/docs/javascript.mustache
+++ b/templates/docs/javascript.mustache
@@ -1,8 +1,12 @@
+<div id="js" class="bs-docs-section-header">
+   <h1>Javascript</h1>
+</div>
+
         <!-- Overview
         ================================================== -->
 <div class="bs-docs-section">
           <div class="page-header">
-            <h1 id="js">JavaScript in Bootstrap</h1>
+            <h1>JavaScript in BootMetro</h1>
           </div>
 
           <h3 id="js-individual-compiled">Individual or compiled</h3>
