--- a/templates/docs/metro-components.mustache
+++ b/templates/docs/metro-components.mustache
@@ -1,3 +1,7 @@
+<div id="metro-components" class="bs-docs-section-header">
+   <h1>Metro Components</h1>
+   <p class="lead">Reusable components used by Windows 8 and Windows Phone 8 or later.</p>
+</div>
          <!-- Commands
          ================================================== -->
 <div class="bs-docs-section">
