--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -82,11 +82,9 @@ Command buttons.
    cursor: pointer;
    background: none;
    background-clip: border-box;
-//   min-height: 32px; /* content (20px) + padding + border */
    height: auto; /* height is 88px (label) or 68px (no label) */
    margin: 0 5px;
    border: 0;
-//   min-width: 50px;
    text-align: center;
    font-size: 9pt;
    font-weight: normal;
@@ -104,19 +102,19 @@ Command button icons.
    min-width: 0;
    min-height: 0;
    padding: 0;
-   width: 40px;
-   height: 40px;
+   width: 42px;
+   height: 42px;
 //   .box-sizing(border-box);
    font-size: 24px;
-   line-height: 40px;
+   line-height: 40px !important;
 }
 
 .win-commandimage {
    letter-spacing: 0;
    vertical-align: middle;
    display: inline-block;
-   width: 40px;
-   height: 40px;
+   width: 42px;
+   height: 42px;
 }
 
 
@@ -184,7 +182,7 @@ a.win-command:hover {
    height: 60px;
 //   box-sizing: border-box;
    font-size: 40px;
-   line-height: 60px;
+   line-height: 60px !important;
    text-align: center;
 }
 
@@ -193,7 +191,7 @@ a.win-command:hover {
    height: 24px;
 //   box-sizing: border-box;
    font-size: 16px;
-   line-height: 24px;
+   line-height: 24px !important;
 }
 
 
