--- a/templates/docs/metro-components.mustache
+++ b/templates/docs/metro-components.mustache
@@ -17,39 +17,39 @@
             <p>Hover each command to display an explanatory tooltip.</p>
             <div class="bs-docs-example bs-docs-example-commands">
                <button class="win-command" rel="tootlip" title="Simple command with only an icon">
-                  <span class="win-commandicon icon-settings"></span>
+                  <span class="win-commandicon icon-cog-4"></span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with icon and label">
-                  <span class="win-commandicon icon-settings"></span>
+                  <span class="win-commandicon icon-cog-4"></span>
                   <span class="win-label">With label</span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with icon with border ring">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-commandicon win-commandring icon-cog-4"></span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with icon and label with border ring">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-commandicon win-commandring icon-cog-4"></span>
                   <span class="win-label">With ring &amp; label</span>
                </button>
             </div>
 <pre class="prettyprint linenums">
 &lt;button class="win-command" rel="tootlip" title="Simple command with only an icon"&gt;
-   &lt;span class="win-commandicon icon-settings"&gt;&lt;/span&gt;
+   &lt;span class="win-commandicon icon-cog-4"&gt;&lt;/span&gt;
 &lt;/button&gt;
 
 &lt;button class="win-command" rel="tootlip" title="Command with icon and label"&gt;
-   &lt;span class="win-commandicon icon-settings"&gt;&lt;/span&gt;
+   &lt;span class="win-commandicon icon-cog-4"&gt;&lt;/span&gt;
    &lt;span class="win-label"&gt;With label&lt;/span&gt;
 &lt;/button&gt;
 
 &lt;button class="win-command" rel="tootlip" title="Command with icon with border ring"&gt;
-   &lt;span class="win-commandicon win-commandring icon-settings"&gt;&lt;/span&gt;
+   &lt;span class="win-commandicon win-commandring icon-cog-4"&gt;&lt;/span&gt;
 &lt;/button&gt;
 
 &lt;button class="win-command" rel="tootlip" title="Command with icon and label with border ring"&gt;
-   &lt;span class="win-commandicon win-commandring icon-settings"&gt;&lt;/span&gt;
+   &lt;span class="win-commandicon win-commandring icon-cog-4"&gt;&lt;/span&gt;
    &lt;span class="win-label"&gt;With ring &amp; label&lt;/span&gt;
 &lt;/button&gt;
 </pre>
@@ -59,20 +59,20 @@
             <div class="bs-docs-example bs-docs-example-commands">
                <div class="win-ui-dark">
                   <button class="win-command" rel="tootlip" title="Simple command with only an icon">
-                     <span class="win-commandicon icon-settings"></span>
+                     <span class="win-commandicon icon-cog-4"></span>
                   </button>
 
                   <button class="win-command" rel="tootlip" title="Command with icon and label">
-                     <span class="win-commandicon icon-settings"></span>
+                     <span class="win-commandicon icon-cog-4"></span>
                      <span class="win-label">With label</span>
                   </button>
 
                   <button class="win-command" rel="tootlip" title="Command with icon with border ring">
-                     <span class="win-commandicon win-commandring icon-settings"></span>
+                     <span class="win-commandicon win-commandring icon-cog-4"></span>
                   </button>
 
                   <button class="win-command" rel="tootlip" title="Command with icon and label with border ring">
-                     <span class="win-commandicon win-commandring icon-settings"></span>
+                     <span class="win-commandicon win-commandring icon-cog-4"></span>
                      <span class="win-label">With ring &amp; label</span>
                   </button>
                </div>
@@ -86,26 +86,26 @@
             <div class="bs-docs-example bs-docs-example-commands">
                <button class="win-command" rel="tootlip" title="Simple command with an image inside">
                   <span class="win-commandimage">
-                     <img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/>
+                     <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                   </span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with image and label">
                   <span class="win-commandimage">
-                     <img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/>
+                     <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                   </span>
                   <span class="win-label">With label</span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with image with border ring">
                   <span class="win-commandimage win-commandring">
-                     <img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/>
+                     <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                   </span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with image and label with border ring">
                   <span class="win-commandimage win-commandring">
-                     <img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/>
+                     <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                   </span>
                   <span class="win-label">With ring &amp; label</span>
                </button>
@@ -113,26 +113,26 @@
 <pre class="prettyprint linenums">
 &lt;button class="win-command" rel="tootlip" title="Simple command with an image inside"&gt;
    &lt;span class="win-commandimage"&gt;
-      &lt;img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/&gt;
    &lt;/span&gt;
 &lt;/button&gt;
 
 &lt;button class="win-command" rel="tootlip" title="Command with image and label"&gt;
    &lt;span class="win-commandimage"&gt;
-      &lt;img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/&gt;
    &lt;/span&gt;
    &lt;span class="win-label"&gt;With label&lt;/span&gt;
 &lt;/button&gt;
 
 &lt;button class="win-command" rel="tootlip" title="Command with image with border ring"&gt;
    &lt;span class="win-commandimage win-commandring"&gt;
-      &lt;img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/&gt;
    &lt;/span&gt;
 &lt;/button&gt;
 
 &lt;button class="win-command" rel="tootlip" title="Command with image and label with border ring"&gt;
    &lt;span class="win-commandimage win-commandring"&gt;
-      &lt;img src="assets/img/sample-tiles.png" width="40" height="40" alt=""/&gt;
+      &lt;img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/&gt;
    &lt;/span&gt;
    &lt;span class="win-label"&gt;With ring &amp; label&lt;/span&gt;
 &lt;/button&gt;
@@ -143,13 +143,13 @@
             <h2>Customization</h2>
             <div class="bs-docs-example bs-docs-example-commands">
                <button class="win-command orange" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-commandicon win-commandring icon-cog-4"></span>
                   <span class="win-label">Custom color</span>
                </button>
             </div>
 <pre class="prettyprint linenums">
 &lt;button class="win-command orange" rel="tootlip" title="Command with icon and label with border ring, with a custom color"&gt;
-   &lt;span class="win-commandicon win-commandring icon-settings"&gt;&lt;/span&gt;
+   &lt;span class="win-commandicon win-commandring icon-cog-4"&gt;&lt;/span&gt;
    &lt;span class="win-label"&gt;Customized&lt;/span&gt;
 &lt;/button&gt;
 </pre>
@@ -173,17 +173,17 @@
             <h2>Command button sizes</h2>
             <div class="bs-docs-example bs-docs-example-commands">
                <button class="win-command win-command-small" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-commandicon win-commandring icon-cog-4"></span>
                   <span class="win-label">Small size</span>
                </button>
 
                <button class="win-command" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-commandicon win-commandring icon-cog-4"></span>
                   <span class="win-label">Default size</span>
                </button>
 
                <button class="win-command win-command-large" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-commandicon win-commandring icon-cog-4"></span>
                   <span class="win-label">Large size</span>
                </button>
             </div>
